Do not modify SmbService or SmbFileSystem on non-UI thread

- Previously SmbService and SmbFileSystem initialized their
temp_file_manager_ members via a Task which was run on a non-UI thread.
Changes to the class state should only happen on the UI thread to avoid
race conditions.

Bug: 879911
Change-Id: If79b0cd1162d2080c9ec1d44b0beb62cc53e8278
Reviewed-on: https://chromium-review.googlesource.com/1208193
Reviewed-by: Zentaro Kavanagh <zentaro@chromium.org>
Commit-Queue: Bailey Berro <baileyberro@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589077}
Former-commit-id: e6bd9834dd435d4d163c18b6582ef8d859c94e8f